fix: minor fixes to osrs-setup.sh